// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`next-auth generator should appendto an existing list of providers 1`] = `
"import NextAuth from 'next-auth';
import AzureADProvider from "next-auth/providers/azure-ad";

const nextAuth = NextAuth({
  providers: [
    GithubProvider({}),
        AzureADProvider({
            clientId: process.env.AZURE_AD_CLIENT_ID as string,
            clientSecret: process.env.AZURE_AD_CLIENT_SECRET as string,
            tenantId: process.env.AZURE_AD_TENANT_ID as string,
        })
    ]
});
default export nextAuth;
"
`;

exports[`next-auth generator should install NextAuth without a provider 1`] = `
"import './global.css';

export const metadata = {
    title: 'Welcome to next-app',
    description: 'Generated by create-nx-workspace',
};

export default function RootLayout({
    children,
}: {
    children: React.ReactNode;
}) {
    return (
        <html lang="en">
            <body>{children}</body>
        </html>
    );
}
"
`;

exports[`next-auth generator should run on an existing NextAuth install with no providers 1`] = `
"import NextAuth from 'next-auth';
import AzureADProvider from "next-auth/providers/azure-ad";

const nextAuth = NextAuth({
    providers: [AzureADProvider({
        clientId: process.env.AZURE_AD_CLIENT_ID as string,
        clientSecret: process.env.AZURE_AD_CLIENT_SECRET as string,
        tenantId: process.env.AZURE_AD_TENANT_ID as string,
    })]
});
default export nextAuth;
"
`;
